<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ahabp_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 package for ahabp project.</description>
  <maintainer email="anyellmata@gmail.com">anyell</maintainer>
  <license>Apache-2.0</license>

<!--Start edit-->
  <depend>px4_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>Micro-XRCE-DDS-Agent</exec_depend>
  <exec_depend>px4_ros_com</exec_depend>
  <exec_depend>py_pubsub</exec_depend> 
  <exec_depend>v4l2_camera</exec_depend>
<!--end edit-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
